# immo-scraper

./: Dockerfile  last_scrape_time.txt  pyproject.toml
immo-scraper/: main.py  models.py  scraper.py  telegram_bot.py
